Refresh button spacing

--- a/jgclark.DashboardReact/requiredFiles/dashboard.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboard.css
@@ -214,8 +214,7 @@ button, input {
 }
 .refreshButton {
 	width: 75px;
-    left: 150px;
-    position: fixed;}
+    margin-left: 40px;
 
 /* Show click pointer over buttons and equivalent */
 button, .fake-button, .clickTarget {
