--- a/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
@@ -23,6 +23,7 @@ dialog {
   border: solid 1px var(--tint-color);
   border-radius: 0.5em;
   box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.4);
+  z-index: 50;
 }
 
 .dialogTitle {
