--- a/jgclark.DashboardReact/requiredFiles/dashboard.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboard.css
@@ -43,8 +43,9 @@ body {
 }
 
 .settings-cog {
-    grid-area: dropdown; /* Assign the area */
+    grid-area: settings-cog; /* Assign the area */
     justify-self: end; /* Align to the right edge */
+	margin-right: 20px;
 }
 
 .dropdown-content {
@@ -58,6 +59,10 @@ body {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+
+.dropdown-content.show {
+	display: block;
+  }
 
 .switch-line {
     display: flex;
@@ -76,9 +81,6 @@ body {
     margin-left: 10px; /* Ensures spacing between the label and the switch */
 }
   
-  .dropdown-content.show {
-	display: block;
-  }
 
 /* Large rows on page */
 .sections {
