--- a/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
@@ -40,6 +40,10 @@ dialog {
   font-weight: 600;
 }
 
+.dialogItemNoteType {
+  font-weight: 400;
+}
+
 .dialogBody {
   padding-block-start: 0.3rem;
   padding-inline-start: 0.5rem;
