--- a/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
@@ -33,6 +33,7 @@ dialog {
   padding-inline-end: 0.5rem;
   padding-block-end: 0.2rem;
   border-block-end: 1px solid gray;
+  cursor:pointer;
   /* margin-block-end: 4px; */
 }
 
