--- a/jgclark.DashboardReact/src/react/css/CalendarPicker.css
+++ b/jgclark.DashboardReact/src/react/css/CalendarPicker.css
@@ -1,9 +1,19 @@
+/* TODO: have not figured out how to set the size of the calendar itself yet */
+/* changing the cell size here helps but i don't know how to set the whole container size */
+.rdp {
+  --rdp-cell-size: '30px';
+  box-shadow: none;
+}
+
 .calendarPickerCustom {
   margin-top: 0px;
   padding-top: 0px;
 }
+
 .rdp-day {
   box-shadow: none;
+  display: inline-grid;
+  width: 1.4rem;
 }
 
 .rdp-months,
@@ -25,14 +35,7 @@
   position: relative;
   width: 100%;
   height: auto;
-  margin-top: 20px;
-}
-
-/* have not figured out how to set the size of the calendar itself yet */
-/* changing the cell size here helps but i don't know how to set the whole container size */
-.rdp {
-  --rdp-cell-size: '30px';
-  box-shadow: none;
+  /* margin-top: 20px; */
 }
 
 /* reduce padding at the top of the calendar */
