--- a/jgclark.DashboardReact/requiredFiles/dashboard.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboard.css
@@ -223,9 +223,10 @@ body {
     padding-right: 5px;
     padding-top: 5px;
     padding-bottom: 10px;
-    background-color: #f9f9f9;
+    background-color: var(--bg-alt-color);
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+    box-shadow:  1px 1px 1px 0px rgb(from var(--fg-main-color) r g b / 0.3);
     z-index: 1;
 	display: none;
 }
@@ -243,7 +244,7 @@ body {
     justify-content: flex-end; /* Aligns content to the right */
     align-items: center; /* Center alignment of the checkbox and label */
     width: 100%; /* Ensures the flex container takes full width */
-    padding-top: 5px;
+    padding-top: 0.3rem; /*5px;*/
 }
 
 .switch-label {
