Squashed commit of the following:
commit fbfc80579a792b855fe0bcaff0a90c1ef6201209
Merge: c5bcfc12 134491e7
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Wed May 15 11:02:39 2024 -0700

    Merge branch 'main' into dashboard-react

commit c5bcfc12e5a9533efb25c3777d55eed610b34e55
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Wed May 15 11:00:12 2024 -0700

    cleaning up after fixing banner

commit 288f4b87493f8c6f690f5deb10f981e0b21e0643
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Wed May 15 10:43:29 2024 -0700

    Fix banners

commit 5c1820e4cd0a1ff1956b04d1e6ec37305859e4c9
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Wed May 15 09:21:23 2024 -0700

    Some minor flow fixes

commit b9530c73262b548ee62cf4714f6b26f80e1ce5f5
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Wed May 15 09:01:02 2024 -0700

    Fix JSON errors

commit da7abfef7f5c3d9337c7bb1aafc0ae6d84faff55
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Tue May 14 22:16:19 2024 -0700

    2.0.0.a19

commit cedf631a8db12ba57ef1bdc5308b74ec3ad02ac4
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Tue May 14 16:50:30 2024 -0700

    fix tooltips on buttons

commit 2c97accdcaf80b5b160b862312c7d5caabb14c0e
Merge: a10bd13c 2a03d804
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Tue May 14 16:47:16 2024 -0700

    Merge branch 'dashboard-react' of https://github.com/NotePlan/plugins into dashboard-react

commit a10bd13c56a0036bae2b5c880e98534380a61490
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Tue May 14 16:43:13 2024 -0700

    fix tooltips

commit 43757b7be1c646ab1a029931185e223fc2078863
Author: David Wertheimer <dwertheimer@users.noreply.github.com>
Date:   Tue May 14 16:43:04 2024 -0700

    add feature flag handling and some tooltip componentry

commit 2a03d8047eb74b7100ef548

--- a/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
+++ b/jgclark.DashboardReact/requiredFiles/dashboardDialog.css
@@ -1,6 +1,6 @@
 /**
   CSS for the items Actions Dialog 
-  Last updated: 26.2.2024 for v0.9.0 by @jgclark
+  Last updated: 5.5.2024 for v2.0.0 by @jgclark
   */
 dialog:modal {
   max-width: 92%;
@@ -23,9 +23,11 @@ dialog {
   border: solid 1px var(--tint-color);
   border-radius: 0.5em;
   box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.4);
+  z-index: 50;
 }
 
 .dialogTitle {
+  display: grid;
   background: var(--bg-alt-color);
   padding-block-start: 0.6rem;
   padding-inline-start: 0.5rem;
@@ -33,10 +35,23 @@ dialog {
   padding-block-end: 0.2rem;
   border-block-end: 1px solid gray;
   /* margin-block-end: 4px; */
+  grid-template-columns: auto auto;
+  /* vertically align content items in center */
+  align-items: center; 
+}
+
+.dialogTitle div:nth-last-child(1) {
+  /* Put very last div (Close button etc.) on RHS */
+  justify-self: end;
+  /* margin-bottom: 5px; */
 }
 
 .dialogItemNote {
   font-weight: 600;
+}
+
+.dialogItemNoteType {
+  font-weight: 400;
 }
 
 .dialogBody {
@@ -48,6 +63,8 @@ dialog {
 
 .dialogDescription {
   padding-block-start: 5px;
+  display: grid;
+  grid-template-columns: 1fr auto; /* mostly the input */
 }
 
 .buttonGrid {
@@ -100,7 +117,7 @@ dialog {
 }
 
 .fullTextInput {
-  width: calc(100% - 4rem);
+  width: calc(100% - 4rem); /* TODO: fix if adding extra icon */
   font-size: 0.85rem;
   padding: 1px 4px 1px 4px;
   border-radius: 4px;
@@ -118,4 +135,11 @@ dialog {
 /* set fa icon colour to tint color */
 i.fa-solid, i.fa-regular {
   color: var(--tint-color);
+}
+
+.closeButton, .skipButton {
+  margin-right: 5px;
+	font-size: 0.9rem;
+  /* background-color: none; */
+  border: none;
 }
